--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
   <div class="rectangle-1-Kcm">
   </div>
   <div class="left-oiH">
-    <img class="photo-2L9" src="https://github.com/Migzzz1998/Migzzz.github.io/blob/main/assets/DOG.jpeg"/>
+    <img class="photo-2L9" src="./assets/DOG.jpeg"/>
     <div class="auto-group-j7gv-X21">
       <div class="contacts-7F7">
         <p class="contacts-y2R">Contacts</p>
