--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
   <div class="rectangle-1-Kcm">
   </div>
   <div class="left-oiH">
-    <img class="photo-2L9" src="https://www.halifaxhumanesociety.org/zupload/library/36740/-88552-700x500-0.jpg?ztv=20220516073234"/>
+    <img class="photo-2L9" src="assets/DOG.jpeg"/>
     <div class="auto-group-j7gv-X21">
       <div class="contacts-7F7">
         <p class="contacts-y2R">Contacts</p>
