--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
   <div class="rectangle-1-Kcm">
   </div>
   <div class="left-oiH">
-    <img class="photo-2L9" src="assets/DOG.jpeg"/>
+    <img class="photo-2L9" src="./assets/DOG.jpeg"/>
     <div class="auto-group-j7gv-X21">
       <div class="contacts-7F7">
         <p class="contacts-y2R">Contacts</p>
@@ -95,21 +95,19 @@
     <div class="auto-group-lxcz-gGq">
       <p class="work-experience-DnZ">Work Experience</p>
       <p class="front-end-developer-freelance-Mtm">
-        <span class="front-end-developer-freelance-Mtm-sub-0">Front-End Developer Aspirant</span>
-        <span class="front-end-developer-freelance-Mtm-sub-1">Learner</span>
-        <span class="front-end-developer-freelance-Mtm-sub-2"> </span>
+        <span class="front-end-developer-freelance-Mtm-sub-0">Computer Programmer I</span>
+        <span class="front-end-developer-freelance-Mtm-sub-1">UP DILIMAN</span>
+        <span class="front-end-developer-freelance-Mtm-sub-2">HRDO</span>
       </p>
       <p class="september-2019-up-to-now-country-x1P">
         <span class="september-2019-up-to-now-country-x1P-sub-0">September 2019 - up to now   </span>
         <span class="september-2019-up-to-now-country-x1P-sub-1">|</span>
-        <span class="september-2019-up-to-now-country-x1P-sub-2">   Country</span>
+        <span class="september-2019-up-to-now-country-x1P-sub-2">  NCR</span>
       </p>
     </div>
     <div class="auto-group-wdg5-ht5">
       <p class="item--3h3">
       •
-      <br/>
-      
       <br/>
       •
       <br/>
@@ -118,68 +116,54 @@
       •
       </p>
       <p class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-risus-commodo-viverra-maecenas-lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-mN9">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Database Management.
       <br/>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Data reports generation.
       <br/>
-      Risus commodo viverra maecenas. 
+      SQL script running/checking. 
       <br/>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. 
+      Python programmer. 
       </p>
     </div>
   </div>
   <div class="education-9Nh">
     <p class="education-51T">Education</p>
-    <p class="national-university-1vh">National University</p>
-    <p class="management-A2u">Management</p>
+    <p class="national-university-1vh">Colegio De Montalban</p>
+    <p class="management-A2u">Computer Engineering</p>
     <p class="september-2009-june-2014-country-Vqs">
-      <span class="september-2009-june-2014-country-Vqs-sub-0">September 2009 - June 2014   </span>
+      <span class="september-2009-june-2014-country-Vqs-sub-0">June 2015 - December 2020   </span>
       <span class="september-2009-june-2014-country-Vqs-sub-1">|</span>
-      <span class="september-2009-june-2014-country-Vqs-sub-2">   Country</span>
+      <span class="september-2009-june-2014-country-Vqs-sub-2">   Rodriguez, Rizal</span>
     </p>
   </div>
   <div class="work-experience-qYM">
     <div class="auto-group-nhe9-yPf">
       <p class="manager-glory-new-XRB">
-        <span class="manager-glory-new-XRB-sub-0">Manager </span>
-        <span class="manager-glory-new-XRB-sub-1">Glory New</span>
-      </p>
-      <p class="march-2015-october-2018-country-hU5">
-        <span class="march-2015-october-2018-country-hU5-sub-0">March 2015 - October 2018   </span>
-        <span class="march-2015-october-2018-country-hU5-sub-1">|</span>
-        <span class="march-2015-october-2018-country-hU5-sub-2">   Country</span>
+        <span class="manager-glory-new-XRB-sub-0">Certificates </span>
+        <span class="manager-glory-new-XRB-sub-1">Webinars</span>
       </p>
     </div>
     <div class="auto-group-ck8r-E6d">
       <p class="item--ndw">
       •
       <br/>
-      
-      <br/>
       •
       <br/>
       •
       </p>
       <p class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-labore-et-dolore-magna-aliqua-quis-ipsum-suspendisse-ultrices-gravida-risus-commodo-viverra-maecenas-7gD">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. 
+      Comprehensive Course on oracle - EDUCBA 
       <br/>
-      Quis ipsum suspendisse ultrices gravida.
+      Python Programming Essential Course - DICT REGIONXI
       <br/>
-      Risus commodo viverra maecenas. 
+      Data analytics fundamentals - DSA 
       </p>
     </div>
   </div>
   <div class="work-experience-BRB">
     <div class="auto-group-ewwu-WiM">
       <p class="manager-glory-llc-TtV">
-        <span class="manager-glory-llc-TtV-sub-0">Manager </span>
-        <span class="manager-glory-llc-TtV-sub-1">Glory LLC </span>
-      </p>
-      <p class="june-2014-february-2015-country-q8M">
-        <span class="june-2014-february-2015-country-q8M-sub-0">June 2014 - February 2015   </span>
-        <span class="june-2014-february-2015-country-q8M-sub-1">|</span>
-        <span class="june-2014-february-2015-country-q8M-sub-2">   Country</span>
-      </p>
+        <span class="manager-glory-llc-TtV-sub-0">Hobbies</span>
     </div>
     <div class="auto-group-aat3-bFw">
       <p class="item--ked">
@@ -188,68 +172,25 @@
       •
       <br/>
       •
+      <br/>
+      .
       </p>
       <p class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-quis-ipsum-suspendisse-ultrices-gravida-risus-commodo-viverra-maecenas-gYH">
-      To be great. 
+      Music. 
       <br/>
-      Quis ipsum suspendisse ultrices gravida.
+      Gaming.
       <br/>
-      Risus commodo viverra maecenas. 
+      Biking. 
+      <br/>
+      Learning New Skills
       </p>
     </div>
   </div>
   <div class="text-intro-Lcq">
-    <p class="front-end-developer-scm">Front-End Developer</p>
-    <p class="john-doe-DAq">John Doe</p>
-    <p class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-quis-ipsum-suspendisse-ultrices-gravida-risus-commodo-viverra-maecenas-accumsan-lacus-vel-facilisis-9qB">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+    <p class="front-end-developer-scm">Front-End Developer Aspirant</p>
+    <p class="john-doe-DAq">Miguel Dumagoso</p>
+    <p class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-quis-ipsum-suspendisse-ultrices-gravida-risus-commodo-viverra-maecenas-accumsan-lacus-vel-facilisis-9qB">Dedicated and enthusiastic aspiring web developer with a passion for creating engaging and user-friendly websites. Proficient in front-end technologies such as HTML, CSS, and JavaScript, with a keen eye for design and a commitment to delivering high-quality user experiences. Eager to leverage my coding skills and creativity to contribute to dynamic web projects and continue learning and growing in the field of web development.</p>
   </div>
-  <div class="projects-1cV">
-    <p class="projects-vUZ">Hobbies</p>
-    <div class="auto-group-vjpf-FFw">
-      <p class="item-1-2-3-kiV">
-      1.
-      <br/>
-      2.
-      <br/>
-      3.
-      </p>
-      <div class="auto-group-p4gq-UuP">
-        <p class="https-barbershopgoitglobal-https-cryptohubgoitglobal-https-kidslikegoitglobal--sRj">
-          Music
-          <br/>
-          Gaming
-          <br/>
-          Biking
-        </p>
-        <div class="group-1-buT">
-          <img class="vector-1-Twf" src="REPLACE_IMAGE:1:51"/>
-          <img class="vector-2-Qc1" src="REPLACE_IMAGE:1:52"/>
-          <img class="vector-2-mBf" src="REPLACE_IMAGE:1:50"/>
-        </div>
-      </div>
-      <p class="html5-css3-javascript-reactjs-nodejs--7mK">
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-0">[</span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-1"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-2">HTML5, CSS3</span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-3"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-4">
-        ]
-        <br/>
-        [
-        </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-5"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-6">JavaScript</span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-7"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-8">
-        ]
-        <br/>
-        [
-        </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-9"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-10">React.js, Node.js</span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-11"> </span>
-        <span class="html5-css3-javascript-reactjs-nodejs--7mK-sub-12">]</span>
-      </p>
     </div>
   </div>
 </div>
